--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
 <meta charset="UTF-8">
 <title>Portifólio de Clodoaldo</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <h1>Portifólio de Clodoaldo</h1>
-<h2>Projeto: Sistema de Gestão</h2>
-<p>Descrição: Um sistema para gerenciar tarefas diárias.</p>
-<p>Tecnologias: Java, Spring Boot</p>
+<section>
+    <h2>Projeto: Sistema de Gestão</h2>
+    <p>Descrição: Um sistema para gerenciar tarefas diárias.</p>
+    <p>Tecnologias: Java, Spring Boot</p>
+</section>
 <h2>Projeto: Aplicativo de Notas</h2>
+<section>
 <p>Descrição: Um app para tomar notas e organizá-las.</p>
 <p>Tecnologias: Java, Android</p>
+</section>
 </body>
 </html>
