primeiro commit "bom"

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 </head>
 <body>
 
-<h1>Portifólio de Clodoaldo</h1>
-<section>
-    <h2>Projeto: Sistema de Gestão</h2>
-    <p>Descrição: Um sistema para gerenciar tarefas diárias.</p>
-    <p>Tecnologias: Java, Spring Boot</p>
+<h1 id="titulo">Portifólio de Clodoaldo</h1>
+<section class="container">
+    <h2 class="item">Projeto: Sistema de Gestão</h2>
+    <p class="item">Descrição: Um sistema para gerenciar tarefas diárias.</p>
+    <p class="item">Tecnologias: Java, Spring Boot</p>
 </section>
 <h2>Projeto: Aplicativo de Notas</h2>
-<section>
-<p>Descrição: Um app para tomar notas e organizá-las.</p>
-<p>Tecnologias: Java, Android</p>
+<section class="container2">
+<p class="item2">Descrição: Um app para tomar notas e organizá-las.</p>
+<p class="item2">Tecnologias: Java, Android</p>
 </section>
 </body>
 </html>
