--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p class="item">Descrição: Um sistema para gerenciar tarefas diárias.</p>
     <p class="item">Tecnologias: Java, Spring Boot</p>
 </section>
-<h2>Projeto: Aplicativo de Notas</h2>
+<h2 id="titulo">Projeto: Aplicativo de Notas</h2>
 <section class="container2">
 <p class="item2">Descrição: Um app para tomar notas e organizá-las.</p>
 <p class="item2">Tecnologias: Java, Android</p>
