--- a/index.html
+++ b/index.html
@@ -4,19 +4,29 @@
 <meta charset="UTF-8">
 <title>Portifólio de Clodoaldo</title>
 <link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Malayalam:wght@100..900&family=Reem+Kufi:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
-
-<h1 id="titulo">Portifólio de Clodoaldo</h1>
-<section class="container">
-    <h2 class="item">Projeto: Sistema de Gestão</h2>
-    <p class="item">Descrição: Um sistema para gerenciar tarefas diárias.</p>
-    <p class="item">Tecnologias: Java, Spring Boot</p>
-</section>
-<h2 id="titulo">Projeto: Aplicativo de Notas</h2>
-<section class="container2">
-<p class="item2">Descrição: Um app para tomar notas e organizá-las.</p>
-<p class="item2">Tecnologias: Java, Android</p>
-</section>
+    <header class="header-nav">
+        <div class="nav-bar"></div>
+        <nav>
+            <ul class="navegation">
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Services</li>
+                <li class="contact-us">Contact Us</li>
+            </ul>
+        </div>
+        </nav>  
+    </header>
+    <section>
+        <p>Hello, i'm</p>
+        <h1>Clodoaldo Santos Matos</h1>
+        <h3>Front-End Developer</h3>
+        <p>Sempre alinhado com o futuro, Desenvolvedor Front-End em formação pensando sempre no futuro e em tendencias futuras.</p>
+        <button>Contrate-me</button> <button>Download CV</button>
+    </section>
 </body>
 </html>
