--- a/index.html
+++ b/index.html
@@ -9,19 +9,16 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Malayalam:wght@100..900&family=Reem+Kufi:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header-nav">
-        <div class="nav-bar"></div>
-        <nav>
+        <div class="nav-bar">
             <ul class="navegation">
-                <li>Home</li>
-                <li>About Us</li>
-                <li>Services</li>
-                <li class="contact-us">Contact Us</li>
+                <li class="item1">Home</li>
+                <li class="item">About Us</li>
+                <li class="item">Services</li>
+                <li class="item">Contact Us</li>
             </ul>
         </div>
-        </nav>  
-    </header>
-    <section>
+
+    <section class="content-box">
         <p>Hello, i'm</p>
         <h1>Clodoaldo Santos Matos</h1>
         <h3>Front-End Developer</h3>
