--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
 <meta charset="UTF-8">
 <title>Portifólio de Clodoaldo</title>
 <link rel="stylesheet" href="style.css">
+<!-- GOOGLE FONTS -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Malayalam:wght@100..900&family=Reem+Kufi:wght@400..700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Tiny5&family=VT323&display=swap" rel="stylesheet">
+
 </head>
 <body>
         <div class="nav-bar">
             <ul class="navegation">
-                <li class="item1">Home</li>
-                <li class="item">About Us</li>
-                <li class="item">Services</li>
-                <li class="item">Contact Us</li>
+                <li class="item1" id="li-item">Home</li>
+                <li class="item" id="li-item">About Us</li>
+                <li class="item"id="li-item">Services</li>
+                <li class="item" id="li-item">Contact Us</li>
             </ul>
         </div>
 
