file: arquivo index modificado

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+    <div class="container">
         <div class="nav-bar">
             <ul class="navegation">
                 <li class="item1" id="li-item">Home</li>
@@ -19,7 +20,6 @@
                 <li class="item" id="li-item">Contact Us</li>
             </ul>
         </div>
-
     <section class="content-box">
         <p>Hello, i'm</p>
         <h1>Clodoaldo Santos Matos</h1>
@@ -27,5 +27,6 @@
         <p>Sempre alinhado com o futuro, Desenvolvedor Front-End em formação pensando sempre no futuro e em tendencias futuras.</p>
         <button>Contrate-me</button> <button>Download CV</button>
     </section>
+</div>
 </body>
 </html>
