ajuste font-size

--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Tiny5&family=VT323&display=swap" rel="stylesheet">
-
 </head>
 <body>
-    <div class="container">
-        <div class="nav-bar">
-            <ul class="navegation">
+    <div class="container" id="container">
+        <div class="main-navbar" id="main-navbar">
+            <ul class="main-navegation">
                 <li class="item1" id="li-item">Home</li>
                 <li class="item" id="li-item">About Us</li>
                 <li class="item"id="li-item">Services</li>
                 <li class="item" id="li-item">Contact Us</li>
             </ul>
         </div>
-    <section class="content-box">
-        <p>Hello, i'm</p>
-        <h1>Clodoaldo Santos Matos</h1>
-        <h3>Front-End Developer</h3>
-        <p>Sempre alinhado com o futuro, Desenvolvedor Front-End em formação pensando sempre no futuro e em tendencias futuras.</p>
+    <div class="description-container">
+        <p class="sub-title">Hello, i'm</p>
+        <h1 class="main-title">Clodoaldo Santos Matos</h1>
+        <p class="main-paragraph">Front-End Developer</h3>
+        <p class="main-biography">Sempre alinhado com o futuro, Desenvolvedor Front-End em formação pensando sempre
+             no futuro e em tendencias futuras.</p>
         <button>Contrate-me</button> <button>Download CV</button>
-    </section>
+    </div>
 </div>
 </body>
 </html>
