css: ajustes de ponteiro

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p class="main-paragraph">Front-End Developer</h3>
         <p class="main-biography">Sempre alinhado com o futuro, Desenvolvedor Front-End em formação pensando sempre
              no futuro e em tendencias futuras.</p>
-        <button>Contrate-me</button> <button>Download CV</button>
+        <button class="btn-function">Contrate-me</button> <button class="btn-function">Download CV</button>
     </div>
 </div>
 </body>
