style: ajustes de style

--- a/index.html
+++ b/index.html
@@ -1,32 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-<meta charset="UTF-8">
-<title>Portifólio de Clodoaldo</title>
-<link rel="stylesheet" href="style.css">
-<!-- GOOGLE FONTS -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Tiny5&family=VT323&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div class="container" id="container">
-        <div class="main-navbar" id="main-navbar">
-            <ul class="main-navegation">
-                <li class="item1" id="li-item">Home</li>
-                <li class="item" id="li-item">About Us</li>
-                <li class="item"id="li-item">Services</li>
-                <li class="item" id="li-item">Contact Us</li>
-            </ul>
-        </div>
-    <div class="description-container">
-        <p class="sub-title">Hello, i'm</p>
-        <h1 class="main-title">Clodoaldo Santos Matos</h1>
-        <p class="main-paragraph">Front-End Developer</h3>
-        <p class="main-biography">Sempre alinhado com o futuro, Desenvolvedor Front-End em formação pensando sempre
-             no futuro e em tendencias futuras.</p>
-        <button class="btn-function">Contrate-me</button> <button class="btn-function">Download CV</button>
-    </div>
-</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Portifólio de Clodoaldo</title>
+    <link rel="stylesheet" href="styles/style.css" />
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tiny5&family=VT323&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <div id="navbar-container">
+        <nav id="main-navbar">
+          <h1 class="title">Home</h1>
+          <ul class="main-navegation">
+            <li class="item" id="li-item">About Us</li>
+            <li class="item" id="li-item">Services</li>
+            <li class="item" id="li-item">Contact Us</li>
+          </ul>
+        </nav>
+      </div>
+      <div id="article-container">
+        <article id="main-article">
+          <h2 id="subtitle">Hello, i'm</h2>
+          <h1 id="title">Clodoaldo Santos Matos</h1>
+          <p>Front-End Developer</p>
+          <p>
+            Sempre alinhado com o futuro, Desenvolvedor Front-End em formação
+            pensando sempre no futuro e em tendencias futuras.
+          </p>
+        </article>
+        <aside>
+            <img src="img/creeper.jpg" alt="">
+        </aside>
+      </div>
+    </header>
+  </body>
 </html>
