--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8" />
     <title>Portifólio de Clodoaldo</title>
     <link rel="stylesheet" href="styles/style.css" />
-    <!-- GOOGLE FONTS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Tiny5&family=VT323&display=swap"
-      rel="stylesheet"
-    />
+    <!-- fontsss -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -35,7 +32,7 @@
           </p>
         </article>
         <aside>
-            <img src="img/creeper.jpg" alt="">
+            <img src="img/my-pic.jpg" alt="foto minha pessoal">
         </aside>
       </div>
     </header>
